fix: alert visibility

--- a/src/less/alerts.less
+++ b/src/less/alerts.less
@@ -26,6 +26,7 @@
 
   position: absolute;
   opacity: 0;
+  visibility: hidden;
   top: 0;
   left: 0;
   z-index: 28;
